# secure_network_messaging_crypto_lib

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  linux_x86_64_build.sh  linux_x86_build.sh
include/: LengthMessageCrypto.h  NegotiatedCryptoNative.h
prebuilt/libsodium/include/sodium/: utils.h
prebuilt/x86_64/include/sodium/: crypto_pwhash.h
src/: LengthMessageCrypto.cpp  NegotiatedCryptoNative.cpp  jni_binding.cpp  main.cpp
tests/: crypto_lib_test.cpp
